# mcp-newrelic

./: .env.example  .pre-commit-config.yaml  DEVELOPMENT.md  Dockerfile  README.md  docker-compose.yml  newrelic-config.json.example  pyproject.toml  server.py  start_server.sh
.github/workflows/: ci.yml  update-dependencies.yml
newrelic_mcp/: cli.py  server.py  types.py  validators.py
newrelic_mcp/client/: alerts_client.py  base_client.py  dashboards_client.py  entities_client.py  unified_client.py
newrelic_mcp/config/: newrelic_config.py
newrelic_mcp/handlers/: resource_handlers.py  tool_definitions.py  tool_handlers.py
newrelic_mcp/handlers/strategies/: alerts.py  base.py  dashboard.py  entities.py  monitoring.py
newrelic_mcp/utils/: alert_formatters.py  dashboard_formatters.py  error_handling.py  graphql_helpers.py
tests/: conftest.py  test_alert_handlers.py  test_alerts_client.py  test_base_client.py  test_config.py  test_dashboard_handlers.py  test_dashboards_client.py  test_entities_client.py  test_entity_handlers.py  test_graphql_helpers.py  test_resource_handlers.py  test_tool_contract.py  test_tool_handlers.py  test_tool_handlers_safety.py  test_utils.py  test_validators.py
