[project]
name = "newrelic-mcp-server"
version = "0.1.0"
description = "New Relic MCP Server"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["newrelic_mcp"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.uv]

[dependency-groups]
dev = [
    "mypy>=1.19.0",
    "pre-commit>=4.5.0",
    "pylint>=4.0.0",
    "pytest>=9.0.0",
    "pytest-asyncio>=1.0.0",
    "ruff>=0.14.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
    "ARG", # flake8-unused-arguments
]
ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
    "W191", # indentation contains tabs
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true

[tool.pylint.messages_control]
disable = [
    "missing-docstring",  # Already handled by ruff
    "line-too-long",      # Already handled by ruff
    "too-few-public-methods",
    "too-many-arguments",
    "too-many-instance-attributes",
    "import-error",       # Can be problematic with namespace packages
]

[tool.pylint.format]
max-line-length = 120

[tool.pylint.design]
max-args = 8
max-locals = 20
max-branches = 15

# Development scripts for easy access
[tool.hatch.envs.dev.scripts]
lint = [
    "ruff check .",
    "mypy newrelic_mcp/",
    "pylint newrelic_mcp/",
]
format = "ruff format ."
test = "pytest"
all-checks = [
    "ruff check .",
    "ruff format --check .",
    "mypy newrelic_mcp/",
    "pylint newrelic_mcp/",
]
